passa todas verificaçoes para middlewares
