# api/models/agendamento.js
@@ -1,12 +1,5 @@
 const { QueryTypes } = require("sequelize");
 const db = require("../DB/db");
-const {
-  conferenciaDeReservaRepetida,
-  conferenciaDeUsuario,
-  buscaAgendamento,
-  verificaEscritorio,
-  usuarioAgendamento,
-} = require("./uteis");
 
 //localhost:3000/api/agendamentos
 //parametros no body. cria retorna a linha criada no banco. funcionando e com verificações ok
@@ -21,31 +14,12 @@ async function criarAgendamento(req, res) {
       });
     }
 
-    if (!verificaEscritorio(id_escritorio)) {
-      return res.status(400).json({
-        message: "id escritorio invalido",
-      });
-    }
-
-    if (!(await conferenciaDeUsuario(id_usuario))) {
-      return res.status(404).json({
-        message: "Usuario não encontrado",
-      });
-    }
-
-    if (await conferenciaDeReservaRepetida(id_usuario, data)) {
-      return res.status(400).json({
-        mensagem: "Você já possui reserva para esse dia",
-      });
-    }
-
     const resultado = await db.query(
       `INSERT INTO agenda (id_usuario, data, id_escritorio) VALUES(${id_usuario}, '${data}', ${id_escritorio}) RETURNING *`,
       {
         type: QueryTypes.INSERT,
       }
     );
-
     res.status(201).json(resultado[0]);
   } catch (err) {
     res.status(404).json({
@@ -55,24 +29,11 @@ async function criarAgendamento(req, res) {
   }
 }
 
-//localhost:3000/api/agendamentos/:id_escritorio/:id_agendamento
+//localhost:3000/api/agendamentos/:id_usuario/:id_agendamento
 //parametros na url. deleta agendamento e retorna a data do agendamento cancelado. funcionando
 async function excluirAgendamento(req, res) {
   try {
-    const { id_agendamento } = req.params;
-
-    //Verificação se todos os campos estão presentes, mensagem para o front
-    if (!id_agendamento) {
-      return res.status(400).json({
-        message: "Todos os campos são obrigatórios",
-      });
-    }
-
-    if (!(await buscaAgendamento(id_agendamento, "agenda"))) {
-      return res.status(404).json({
-        message: "Agendamento não encontrado",
-      });
-    }
+    const { id_agendamento, id_usuario } = req.params;  
 
     const resultado = await db.query(
       `DELETE FROM agenda WHERE id_agendamento=${id_agendamento} RETURNING data`,
@@ -91,31 +52,16 @@ async function excluirAgendamento(req, res) {
 }
 
 //altera data. escritorio na url e dados no body da request. retorna nova data salva. funcionando
-//localhost:3000/api/agendamentos/:id_escritorio
+//localhost:3000/api/agendamentos/:id_agendamento
 async function alterarAgendamento(req, res) {
   try {
-    const { id_agendamento, data: novaData } = req.body;
-    const { id_escritorio } = req.params;
+    const { id_usuario, data: novaData } = req.body;
+    const { id_agendamento } = req.params;
 
     //Verificação se todos os campos estão presentes, mensagem para o front
-    if (!id_escritorio || !id_agendamento || !novaData) {
+    if (!id_agendamento || !novaData) {
       return res.status(400).json({
         message: "Todos os campos são obrigatórios",
-      });
-    }
-
-    if (!(await buscaAgendamento(id_agendamento, "agenda"))) {
-      return res.status(404).json({
-        message: "Agendamento não encontrado",
-      });
-    }
-
-    const id_usuario = await usuarioAgendamento(id_agendamento, "agenda");
-
-    //verifica se nao ta alterando pra um dia que ja tem reserva
-    if (await conferenciaDeReservaRepetida(id_usuario, novaData, "agenda")) {
-      return res.status(400).json({
-        mensagem: "Você já possui reserva para esse dia",
       });
     }
 
@@ -125,7 +71,7 @@ async function alterarAgendamento(req, res) {
         type: QueryTypes.UPDATE,
       }
     );
-    res.status(200).json(resultado);
+    res.status(200).json(resultado[0]);
   } catch (err) {
     res.status(404).json({
       error: true,
@@ -135,12 +81,11 @@ async function alterarAgendamento(req, res) {
 }
 
 //retorna todos os agendamentos FUTUROS do usuario em ordem de data
-//localhost:3000/api/agendamentos/:id_usuario funcionando
+//localhost:3000/api/agendamentos/:id_usuario
 async function listarAgendamentos(req, res) {
   try {
     const { id_usuario } = req.params;
 
-    if (await conferenciaDeUsuario(id_usuario)) {
       const query = `
       SELECT * FROM agenda where id_usuario=${id_usuario} AND data >= now()
       ORDER BY data`;
@@ -150,11 +95,7 @@ async function listarAgendamentos(req, res) {
       });
 
       res.status(200).json(resultado);
-    } else {
-      res.status(404).json({
-        message: "usuario nao existe",
-      });
-    }
+    
   } catch (err) {
     res.status(404).json({
       error: true,
@@ -162,6 +103,7 @@ async function listarAgendamentos(req, res) {
     });
   }
 }
+
 
 module.exports = {
   criarAgendamento,
