# api/models/calendario.js
@@ -1,19 +1,11 @@
 const { QueryTypes } = require("sequelize");
 const db = require("../DB/db");
-const { verificaEscritorio } = require("./uteis");
 
 //retorna todos agendamentos FUTUROS de um determinado mes/ano em um determinado escritorio
 //localhost:3000/api/calendario/:id_escritorio/:mes/:ano
 async function listarTodosAgendamentos(req, res) {
   try {
     const { id_escritorio, mes, ano } = req.params;
-
-    //Verificação se todos os campos estão presentes, mensagem para o front
-    if (!id_escritorio || !mes || !ano) {
-      return res
-        .status(400)
-        .json({ message: "Todos os campos são obrigatórios" });
-    }
 
     const reservas = await db.query(
       `SELECT * FROM agenda WHERE
@@ -34,6 +26,7 @@ async function listarTodosAgendamentos(req, res) {
     res.status(404).json({ error: true, message: err.message });
   }
 }
+
 //localhost:3000/api/calendario/:id_escritorio?data=2021-09-12
 async function listarVagasPorDia(req, res) {
   try {
@@ -47,20 +40,21 @@ async function listarVagasPorDia(req, res) {
         .json({ message: "Todos os campos são obrigatórios" });
     }
 
+    //verifica reservas maximas permitidas no escritorio
     const capacidade = await db.query(
-      `SELECT capacidade, vagas FROM lotacao 
+      `SELECT vagas FROM lotacao 
       WHERE id_escritorio = ${id_escritorio}`,
       { type: QueryTypes.SELECT }
     );
 
-    const agendamentos = await db.query(
-      `SELECT count(*) FROM agenda WHERE id_escritorio = ${id_escritorio} AND data = '${data}' GROUP BY data`,
+    //verifica quantos agendamentos ja tem no dia
+    let agendamentos = await db.query(
+      `SELECT count(*) FROM agenda WHERE id_escritorio = ${id_escritorio} AND data = '${data}'`,
       { type: QueryTypes.SELECT }
     );
-    
-    const numeroAgendamentos = agendamentos[0] ? Number(agendamentos[0].count) : 0;
-
-    const vagas = capacidade[0].vagas - numeroAgendamentos;
+    agendamentos = agendamentos[0]["count"];
+    //calcula o total de vagas que sobrou
+    const vagas = capacidade[0]["vagas"] - agendamentos;
 
     res.status(200).json({ vagas: vagas });
   } catch (err) {
@@ -68,4 +62,11 @@ async function listarVagasPorDia(req, res) {
   }
 }
 
-module.exports = { listarTodosAgendamentos, listarVagasPorDia };
+
+//lista vagas em cada dia do mês (retorna vagas que estão sobrando em dias que o escritorio já tem algum agendamento)
+//se a data nao estiver na lista, é pq o escritorio nao tem nenhum agendamento naquele dia
+async function listarVagasRestantesMes(req, res) {
+  const { id_escritorio, mes } = req.params;
+}
+
+module.exports = { listarTodosAgendamentos, listarVagasPorDia, listarVagasRestantesMes };
