# api/models/lotacao.js
@@ -1,26 +1,18 @@
 const { QueryTypes } = require("sequelize");
 const db = require("../DB/db");
-const { verificaEscritorio } = require("./uteis");
 
 //funcao que entrega todos dados de lotacao do escritorio solicitado (capacidade, porcentagem permitida e vagas)
 //localhost:3000/api/lotacao/:id_escritorio
-//funcionando
 async function consultaCapacidadeEscritorio(req, res) {
   try {
     const { id_escritorio } = req.params;
-
-    if (!verificaEscritorio(id_escritorio)) {
-      return res.status(400).json({
-        message: "id escritorio invalido",
-      });
-    }
 
     const capacidadeLocal = await db.query(
       `SELECT * FROM lotacao WHERE id_escritorio = ${id_escritorio}`,
       { type: QueryTypes.SELECT }
     );
+    res.status(200).json(capacidadeLocal[0]);
 
-    res.status(200).json(capacidadeLocal);
   } catch (err) {
     res.status(400).json({
       error: true,
@@ -30,7 +22,6 @@ async function consultaCapacidadeEscritorio(req, res) {
 }
 
 //função para alterar a capacidade de um escritorio. id do escritorio nos parametros e o resto no body
-//funcionando
 //localhost:3000/api/lotacao/:id_escritorio
 async function alterarCapacidadeEscritorio(req, res) {
   try {
@@ -51,18 +42,12 @@ async function alterarCapacidadeEscritorio(req, res) {
       return res.status(400).json({ message: "Nada a alterar" });
     }
 
-    if (!verificaEscritorio(id_escritorio)) {
-      return res.status(400).json({
-        message: "id escritorio invalido",
-      });
-    }
-
+    
+    //verifica se usuario é admin
     const conferenciaAdmin = await db.query(
       `SELECT isAdmin FROM usuario WHERE id = ${id_usuario}`,
       { type: QueryTypes.SELECT }
     );
-
-    console.log(conferenciaAdmin[0].isadmin);
 
     if (conferenciaAdmin[0].isadmin === true) {
       if (novaCapacidade) {
@@ -77,7 +62,7 @@ async function alterarCapacidadeEscritorio(req, res) {
       }
 
       if (novaPorcentagem) {
-        if (novaPorcentagem <= 100 && novaPorcentagem > 0) {
+        if (novaPorcentagem <= 100 && novaPorcentagem > 0) { //verifica se é uma porcentagem entre 0 e 100
           await db.query(
             `UPDATE lotacao SET porcentagem_permitida = ${novaPorcentagem} WHERE id_escritorio = ${id_escritorio}`
           );
@@ -96,7 +81,8 @@ async function alterarCapacidadeEscritorio(req, res) {
       res.status(200).json({
         message: "Alterado com sucesso",
       });
-    } else {
+
+    } else { //retorno se isAdmin = false
       return res.status(400).json({
         message: "Acesso negado",
       });
