# api/models/uteis.js
@@ -5,40 +5,32 @@ const db = require("../DB/db");
 
 //Utilizar para as funções dos middlewares
 
-async function buscaAgendamento(id_agendamento, tabela) {
+async function buscaAgendamento(id_agendamento) { //verifica se determinado agendamento existe
   const resultado = await db.query(
     `SELECT COUNT(1)
-    FROM ${tabela}
+    FROM agenda
     WHERE id_agendamento = ${id_agendamento}`, {
       type: QueryTypes.SELECT
     }
   );
-  if (resultado[0]["count"] == 0) {return false;} //false = nao tem agendamento nesse dia
+  if (resultado[0]["count"] == 0) {return false;}
   return true;
 }
 
-async function conferenciaDeReservaRepetida(id_usuario, data) {
-
-  const agendamento = await verificaReservaData(id_usuario, data, "agenda");
-  if (!agendamento) {
-    return false;
-  }
-  return true;
-}
-
-async function verificaReservaData(id_usuario, data, agenda) {
+async function conferenciaDeDataNaoRepetida(id_usuario, data) { //verifica se o usuario ja tem reserva nesse dia
   const resultado = await db.query(
     `SELECT COUNT(1)
-    FROM ${agenda}
+    FROM agenda
     WHERE id_usuario = ${id_usuario} AND data = '${data}'`, {
       type: QueryTypes.SELECT
     }
   );
-  if (resultado[0]["count"] == 0) {return false;} //false = nao tem agendamento nesse dia
-  return true;
+  if (resultado[0]["count"] == 0) {return true;}
+  return false;
 }
 
-async function conferenciaDeUsuario(id_usuario) {
+
+async function conferenciaDeUsuario(id_usuario) { //verifica se usuario existe
   const usuario = await db.query(
     `SELECT COUNT(1)
     FROM usuario
@@ -49,8 +41,7 @@ async function conferenciaDeUsuario(id_usuario) {
   return usuario[0]["count"] == 1 ? true : false;
 }
 
-//função verificar se escritorio é valido
-async function verificaEscritorio(id_escritorio) {
+async function verificaEscritorio(id_escritorio) { //verifica se o id de escritorio passado é de um escritorio que existe no BD
   let idVerifica;
   if (typeof id_escritorio != "number") {
     idVerifica = parseInt(id_escritorio);
@@ -60,26 +51,26 @@ async function verificaEscritorio(id_escritorio) {
   const numEscritorios = await db.query (`select count(*) from lotacao`,
   { type: QueryTypes.SELECT });
 
-  if (idVerifica > 0 && idVerifica <= Number(numEscritorios[0].count)) {
+  if (idVerifica > 0 && idVerifica <= Number(numEscritorios[0]["count"])) {
     return true;
   } else {
     return false;
   }
 }
 
-async function usuarioAgendamento(id_agendamento, tabela) {
+async function usuarioAgendamento(id_agendamento) { //verifica quem é o usuario de um id de agendamento
   const usuario = await db.query(
     `SELECT id_usuario
-    FROM ${tabela}
+    FROM agenda
     WHERE id_agendamento = ${id_agendamento}`, {
       type: QueryTypes.SELECT
     }
   );
-  return usuario[0]["id_usuario"];
+  return usuario[0]["id_usuario"]; //retorna o id do usuario
 }
 
 module.exports = {
-  conferenciaDeReservaRepetida,
+  conferenciaDeDataNaoRepetida,
   conferenciaDeUsuario,
   buscaAgendamento,
   verificaEscritorio,
