# api/routes/agendamentos.routes.js
@@ -6,11 +6,13 @@ const {
   alterarAgendamento,
   listarAgendamentos,
 } = require("../models/agendamento");
-const { escritorioValido } = require("../models/middlewares");
 
-router.get("/:id_usuario", listarAgendamentos);
-router.post("/", criarAgendamento);
-router.patch("/:id_escritorio", escritorioValido, alterarAgendamento);
-router.delete("/:id_agendamento", excluirAgendamento);
+//middlewares de verificação antes de ir para o model
+const { escritorioValido, usuarioExiste, agendamentoPertenceUsuario, dataNaoRepetida } = require("../models/middlewares");
+
+router.get("/:id_usuario", usuarioExiste, listarAgendamentos);
+router.post("/", usuarioExiste, escritorioValido, dataNaoRepetida, criarAgendamento);
+router.patch("/:id_agendamento", agendamentoPertenceUsuario, dataNaoRepetida, alterarAgendamento);
+router.delete("/:id_usuario/:id_agendamento", agendamentoPertenceUsuario, excluirAgendamento);
 
 module.exports = router;
